# cursed-linalg

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: array_ext.rs  error.rs  expm.rs  inv.rs  lib.rs  pow.rs  sp_func.rs
src/decompositions/: lu.rs
